--- a/index.html
+++ b/index.html
@@ -15,21 +15,31 @@
   <style>
     * { box-sizing: border-box; }
     body { margin: 0; font-family: Arial, sans-serif; }
-    .sidebar { position: fixed; top: 0; left: 0; width: 200px; height: 100vh; background: #0052cc; display: flex; flex-direction: column; align-items: center; padding-top: 1rem; z-index: 1000; }
-    .sidebar img { width: 60px; margin-bottom: 1rem; border-radius: 8px; }
-    .btn-nav { width: 100%; background: none; color: #fff; border: none; text-align: left; padding: 0.75rem 1rem; cursor: pointer; display: flex; align-items: center; transition: background 0.2s; }
+    .sidebar {
+      position: fixed; top: 0; left: 0;
+      width: 200px; height: 100%;
+      background: #0052cc;
+      display: flex; flex-direction: column; align-items: center;
+      padding-top: 1rem; z-index: 1000;
+    }
+    .sidebar img {
+      width: 60px; margin-bottom: 1rem; border-radius: 8px;
+    }
+    .btn-nav {
+      width: 100%; background: none; color: #fff; border: none;
+      text-align: left; padding: 0.75rem 1rem; cursor: pointer;
+      display: flex; align-items: center; transition: background 0.2s;
+    }
     .btn-nav .material-icons { margin-right: 8px; }
     .btn-nav.active, .btn-nav:hover { background: #003d99; }
-    .content { margin-left: 200px; padding: 1rem; }
+    .content {
+      margin-left: 200px; padding: 1rem;
+    }
     .section { display: none; }
     .section.active { display: block; }
-    form input, form select, form textarea { width: 100%; padding: 0.5rem; margin-bottom: 0.75rem; border: 1px solid #ccc; border-radius: 4px; }
-    table { width: 100%; border-collapse: collapse; margin-bottom: 1rem; }
-    th, td { border: 1px solid #ccc; padding: 0.5rem; text-align: left; }
-    .chart-container { width: 100%; height: 300px; margin-bottom: 1rem; }
     @media (max-width: 768px) {
-      .sidebar { width: 100%; flex-direction: row; overflow-x: auto; }
-      .content { margin-left: 0; padding-top: 3.5rem; }
+      .sidebar { width: 100%; height: auto; flex-direction: row; overflow-x: auto; }
+      .content { margin-left: 0; padding-top: 4rem; }
     }
   </style>
 </head>
@@ -50,7 +60,6 @@
     <section id="splash" class="section active">
       <h2>Bienvenido a EVANG_EBLA</h2>
     </section>
-
     <section id="registro" class="section">
       <h2>Registro de Contacto</h2>
       <form id="form-contacto">
@@ -65,85 +74,65 @@
         <button type="submit">Guardar</button>
       </form>
     </section>
-
     <section id="historial" class="section">
       <h2>Historial de Contactos</h2>
-      <select id="filtro-estado"><option value="all">Todos</option><option value="aceptoCristo">Aceptó a Cristo</option><option value="bautizado">Bautizado</option><option value="discipulado">Discipulado</option></select>
       <table>
-        <thead><tr><th>Nombre</th><th>Edad</th><th>Teléfono</th><th>Género</th><th>Ubicación</th><th>Acciones</th></tr></thead>
+        <thead><tr><th>Nombre</th><th>Edad</th><th>Teléfono</th><th>Género</th><th>Ubicación</th></tr></thead>
         <tbody id="lista-contactos"></tbody>
       </table>
-      <button id="export-contactos">Exportar a Excel</button>
     </section>
-
     <section id="seguimiento" class="section">
       <h2>Seguimiento</h2>
       <form id="form-seguimiento">
         <select id="contacto-seg" required><option value="">Selecciona contacto</option></select>
         <input type="date" id="fecha-seg" required />
-        <select id="tipo-seg" required><option>Visita</option><option>Llamada</option><option>Mensaje</option></select>
-        <fieldset><legend>Temas de discipulado</legend>
-          <label><input type="checkbox" class="check-tema" value="Oración"/>Oración</label>
-          <label><input type="checkbox" class="check-tema" value="Biblia"/>Biblia</label>
-          <label><input type="checkbox" class="check-tema" value="Fe"/>Fe</label>
-        </fieldset>
+        <select id="tipo-seg"><option>Visita</option><option>Llamada</option><option>Mensaje</option></select>
         <button type="submit">Registrar</button>
       </form>
       <ul id="lista-seguimiento"></ul>
-      <button id="export-interacciones">Exportar a Excel</button>
     </section>
-
     <section id="grupos" class="section">
       <h2>Grupos y Discipulados</h2>
       <form id="form-grupo">
-        <input type="text" id="nombre-grupo" placeholder="Nombre de grupo" required />
-        <select id="miembros-grupo" multiple></select>
+        <input id="nombre-grupo" placeholder="Nombre Grupo" required />
         <button type="submit">Crear Grupo</button>
       </form>
       <ul id="lista-grupos"></ul>
-      <button id="export-grupos">Exportar a Excel</button>
     </section>
-
     <section id="bautismo" class="section">
       <h2>Calendario de Bautismo</h2>
       <form id="form-bautismo">
-        <input type="text" id="bautizo-nombre" placeholder="Nombre" required />
+        <input id="bautizo-nombre" placeholder="Nombre" required />
         <input type="date" id="bautizo-fecha" required />
         <button type="submit">Agregar Bautismo</button>
       </form>
       <ul id="lista-bautismos"></ul>
     </section>
-
     <section id="reportes" class="section">
-      <h2>Reportes y Estadísticas</h2>
+      <h2>Reportes</h2>
       <button id="add-report">Agregar Reporte</button>
       <div id="form-reporte" style="display:none; margin-top:1rem;">
-        <select id="reporte-contacto"><option value="">Selecciona Miembro</option></select>
+        <select id="reporte-contacto"></select>
         <textarea id="reporte-texto" placeholder="Describe la comunicación"></textarea>
-        <button id="save-reporte">Guardar Reporte</button>
+        <button id="save-reporte">Guardar</button>
       </div>
       <ul id="lista-reportes"></ul>
     </section>
-
     <section id="calendario" class="section">
       <h2>Calendario de Evangelismo</h2>
       <form id="form-evento">
-        <input type="text" id="nombre-evento" placeholder="Nombre evento" required />
-        <select id="tipo-evento" required><option>Templo</option><option>Callejero</option></select>
+        <input id="nombre-evento" placeholder="Evento" required />
         <input type="date" id="fecha-evento" required />
-        <textarea id="detalles-evento" placeholder="Detalles"></textarea>
-        <button type="submit">Programar Evento</button>
+        <button type="submit">Programar</button>
       </form>
       <ul id="lista-eventos"></ul>
-      <button id="export-eventos">Exportar a Excel</button>
     </section>
   </main>
 
   <script>
   document.addEventListener('DOMContentLoaded', () => {
     const contactos = [];
-    // Navegación
-        // Navegación entre secciones (no abrir formulario de reporte)
+    // Sidebar navigation
     document.querySelectorAll('.btn-nav').forEach(btn => {
       btn.addEventListener('click', () => {
         document.querySelectorAll('.btn-nav').forEach(b => b.classList.remove('active'));
@@ -152,58 +141,46 @@
         document.querySelectorAll('.section').forEach(s => s.classList.toggle('active', s.id === sec));
       });
     });
-    });
-    // Registro
+    // Registro Contactos
     document.getElementById('form-contacto').addEventListener('submit', e => {
-      e.preventDefault();
-      const f = e.target;
-      contactos.push({ id: Date.now(), nombre: f.nombre.value });
-      const row = `<tr><td>${f.nombre.value}</td><td>${f.edad.value}</td><td>${f.telefono.value}</td><td>${f.genero.value}</td><td>${f.ubicacion.value}</td><td>—</td></tr>`;
-      document.getElementById('lista-contactos').innerHTML += row;
+      e.preventDefault(); const f=e.target;
+      contactos.push({ id:Date.now(), nombre:f.nombre.value });
+      document.getElementById('lista-contactos').innerHTML += `<tr><td>${f.nombre.value}</td><td>${f.edad.value}</td><td>${f.telefono.value}</td><td>${f.genero.value}</td><td>${f.ubicacion.value}</td></tr>`;
       f.reset();
     });
     // Seguimiento
-    document.getElementById('form-seguimiento').addEventListener('submit', e => {
-      e.preventDefault();
-      const sel = document.getElementById('contacto-seg');
-      document.getElementById('lista-seguimiento').innerHTML += `<li>${sel.options[sel.selectedIndex].text} - ${document.getElementById('fecha-seg').value} (${document.getElementById('tipo-seg').value})</li>`;
+    document.getElementById('form-seguimiento').addEventListener('submit', e=>{
+      e.preventDefault(); const sel=document.getElementById('contacto-seg');
+      document.getElementById('lista-seguimiento').innerHTML += `<li>${sel.value} - ${document.getElementById('fecha-seg').value}</li>`;
       e.target.reset();
     });
     // Grupos
-    document.getElementById('form-grupo').addEventListener('submit', e => {
-      e.preventDefault();
-      const name = document.getElementById('nombre-grupo').value;
-      document.getElementById('lista-grupos').innerHTML += `<li>${name}</li>`;
-      e.target.reset();
+    document.getElementById('form-grupo').addEventListener('submit', e=>{
+      e.preventDefault(); const name=document.getElementById('nombre-grupo').value;
+      document.getElementById('lista-grupos').innerHTML += `<li>${name}</li>`; e.target.reset();
     });
     // Bautismo
-    document.getElementById('form-bautismo').addEventListener('submit', e => {
-      e.preventDefault();
-      document.getElementById('lista-bautismos').innerHTML += `<li>${document.getElementById('bautizo-nombre').value} - ${document.getElementById('bautizo-fecha').value}</li>`;
-      e.target.reset();
-    });
-    // Eventos
-    document.getElementById('form-evento').addEventListener('submit', e => {
-      e.preventDefault();
-      document.getElementById('lista-eventos').innerHTML += `<li>${document.getElementById('nombre-evento').value} (${document.getElementById('tipo-evento').value}) - ${document.getElementById('fecha-evento').value}</li>`;
-      e.target.reset();
+    document.getElementById('form-bautismo').addEventListener('submit', e=>{
+      e.preventDefault(); document.getElementById('lista-bautismos').innerHTML += `<li>${document.getElementById('bautizo-nombre').value} - ${document.getElementById('bautizo-fecha').value}</li>`; e.target.reset();
     });
     // Reportes
-    document.getElementById('add-report').addEventListener('click', () => {
-      if (!contactos.length) return alert('Registra primero un contacto.');
-      const form = document.getElementById('form-reporte');
-      form.style.display = form.style.display === 'block' ? 'none' : 'block';
-      if (form.style.display === 'block') {
-        const sel = document.getElementById('reporte-contacto');
-        sel.innerHTML = '<option value="">Selecciona Miembro</option>';
-        contactos.forEach(c => sel.innerHTML += `<option value="${c.id}">${c.nombre}</option>`);
+    document.getElementById('add-report').addEventListener('click', ()=>{
+      if(!contactos.length) return alert('Registra primero un contacto');
+      const form=document.getElementById('form-reporte'); form.style.display=form.style.display==='block'?'none':'block';
+      if(form.style.display==='block'){
+        const sel=document.getElementById('reporte-contacto'); sel.innerHTML='';
+        contactos.forEach(c=> sel.innerHTML += `<option value="${c.id}">${c.nombre}</option>`);
       }
     });
-    document.getElementById('save-reporte').addEventListener('click', () => {
-      const sel = document.getElementById('reporte-contacto');
-      const txt = document.getElementById('reporte-texto').value;
+    document.getElementById('save-reporte').addEventListener('click', ()=>{
+      const sel=document.getElementById('reporte-contacto'); const txt=document.getElementById('reporte-texto').value;
       document.getElementById('lista-reportes').innerHTML += `<li>${sel.options[sel.selectedIndex].text}: ${txt}</li>`;
-      document.getElementById('form-reporte').style.display = 'none';
+      document.getElementById('form-reporte').style.display='none';
+    });
+    // Eventos
+    document.getElementById('form-evento').addEventListener('submit', e=>{
+      e.preventDefault(); const n=document.getElementById('nombre-evento').value;
+      document.getElementById('lista-eventos').innerHTML += `<li>${n} - ${document.getElementById('fecha-evento').value}</li>`; e.target.reset();
     });
   });
   </script>
